@@ -18,69 +18,17 @@
 package hockeypuck
 
 import (
-	"bytes"
 	"crypto/sha512"
+	"encoding/binary"
 	"encoding/hex"
-	"errors"
+	"io"
+	"log"
+	"regexp"
+	"strings"
 	"bitbucket.org/cmars/go.crypto/openpgp"
+	"bitbucket.org/cmars/go.crypto/openpgp/armor"
 	"bitbucket.org/cmars/go.crypto/openpgp/packet"
 )
-
-// Merge entity from src into dst, adding additional identities,
-// signatures, and subkeys in src not already in dst.
-// The keyring dst is modified in-place.
-func MergeEntity(dst *openpgp.Entity, src *openpgp.Entity) (changed bool, err error) {
-	changed = false
-	if dst.PrimaryKey.Fingerprint != src.PrimaryKey.Fingerprint {
-		err = errors.New("Merge failed, primary key fingerprints do not match.")
-		return
-	}
-	for _, srcIdent := range src.Identities {
-		dstIdent, has := dst.Identities[srcIdent.Name]
-		if !has {
-			dst.Identities[srcIdent.Name] = dstIdent
-			changed = true
-		} else {
-			srcSigs := mapSigs(srcIdent.Signatures)
-			dstSigs := mapSigs(dstIdent.Signatures)
-			for srcRaw, srcSig := range srcSigs {
-				_, has := dstSigs[srcRaw]
-				if !has {
-					dstIdent.Signatures = append(dstIdent.Signatures, srcSig)
-					changed = true
-				}
-			}
-		}
-	}
-	srcSubkeys := mapSubkeys(src)
-	dstSubkeys := mapSubkeys(dst)
-	for srcSkFp, srcSubkey := range srcSubkeys {
-		_, has := dstSubkeys[srcSkFp]
-		if !has {
-			dst.Subkeys = append(dst.Subkeys, *srcSubkey)
-			changed = true
-		}
-	}
-	return
-}
-
-func mapSigs(sigs []*packet.Signature) map[string]*packet.Signature {
-	result := make(map[string]*packet.Signature)
-	for _, sig := range sigs {
-		raw := bytes.NewBuffer([]byte{})
-		sig.Serialize(raw)
-		result[raw.String()] = sig
-	}
-	return result
-}
-
-func mapSubkeys(e *openpgp.Entity) map[[20]byte]*openpgp.Subkey {
-	result := make(map[[20]byte]*openpgp.Subkey)
-	for _, subkey := range e.Subkeys {
-		result[subkey.PublicKey.Fingerprint] = &subkey
-	}
-	return result
-}
 
 func Fingerprint(pubkey *packet.PublicKey) string {
 	return hex.EncodeToString(pubkey.Fingerprint[:])
@@ -90,4 +38,155 @@ func Digest(data []byte) string {
 	h := sha512.New()
 	h.Write(data)
 	return hex.EncodeToString(h.Sum(nil))
+}
+
+func WriteKey(out io.Writer, key *PubKey) error {
+	w, err := armor.Encode(out, openpgp.PublicKeyType, nil)
+	if err != nil {
+		return err
+	}
+	defer w.Close()
+	pktObjChan := make(chan PacketObject)
+	go func(){
+		key.Traverse(pktObjChan)
+		close(pktObjChan)
+	}()
+	for pktObj := range pktObjChan {
+		_, err = w.Write(pktObj.GetPacket())
+		if err != nil {
+			close(pktObjChan)
+			return err
+		}
+	}
+	return nil
+}
+
+func ReadKeys(r io.Reader) (keyChan chan *PubKey, errorChan chan error) {
+	keyChan = make(chan *PubKey)
+	errorChan = make(chan error)
+	go func(){
+		defer close(keyChan)
+		defer close(errorChan)
+		var err error
+		var currentSignable Signable
+		var currentUserId *UserId
+		or := packet.NewOpaqueReader(r)
+		var p packet.Packet
+		var op *packet.OpaquePacket
+		var pubKey *PubKey
+		var fp string
+		for op, err = or.Next(); err != io.EOF; op, err = or.Next() {
+			if err != nil {
+				errorChan <- err
+				return
+			}
+			p, err = op.Parse()
+			if err != nil {
+				errorChan <- err
+				return
+			}
+			switch p.(type) {
+			case *packet.PublicKey:
+				pk := p.(*packet.PublicKey)
+				fp = Fingerprint(pk)
+				keyLength, err := pk.BitLength()
+				if err != nil {
+					errorChan <- err
+					return
+				}
+				if !pk.IsSubkey {
+					if pubKey != nil {
+						keyChan <- pubKey
+					}
+					// This is the primary public key
+					pubKey = &PubKey{
+						Fingerprint: fp,
+						KeyId: pk.Fingerprint[12:20],
+						ShortId: pk.Fingerprint[16:20],
+						Algorithm: int(pk.PubKeyAlgo),
+						KeyLength: keyLength }
+					pubKey.SetPacket(op)
+					currentSignable = pubKey
+				} else {
+					if pubKey == nil {
+						continue
+					}
+					// This is a sub key
+					subKey := &SubKey{
+						Fingerprint: fp,
+						Algorithm: int(pk.PubKeyAlgo),
+						KeyLength: keyLength }
+					subKey.SetPacket(op)
+					pubKey.SubKeys = append(pubKey.SubKeys, subKey)
+					currentSignable = subKey
+					currentUserId = nil
+				}
+			case *packet.Signature:
+				if currentSignable == nil {
+					continue
+				}
+				s := p.(*packet.Signature)
+				if s.IssuerKeyId == nil {
+					log.Println("Signature missing IssuerKeyId!", "Public key fingerprint:",
+							pubKey.Fingerprint)
+					continue
+				}
+				var issuerKeyId [8]byte
+				binary.BigEndian.PutUint64(issuerKeyId[:], *s.IssuerKeyId)
+				sig := &Signature{
+					SigType: int(s.SigType),
+					IssuerKeyId: issuerKeyId[:] }
+				sig.SetPacket(op)
+				currentSignable.AppendSig(sig)
+			case *packet.UserId:
+				if pubKey == nil {
+					continue
+				}
+				uid := p.(*packet.UserId)
+				userId := &UserId{
+					Id: uid.Id,
+					Keywords: splitUserId(uid.Id) }
+				userId.SetPacket(op)
+				currentSignable = userId
+				currentUserId = userId
+				pubKey.Identities = append(pubKey.Identities, userId)
+			case *packet.OpaquePacket:
+				// Packets not yet supported by go.crypto/openpgp
+				switch op.Tag {
+				case 17:  // Process user attribute packet
+					userAttr := &UserAttribute{}
+					userAttr.SetPacket(op)
+					if currentUserId != nil {
+						currentUserId.Attributes = append(currentUserId.Attributes, userAttr)
+					}
+					currentSignable = userAttr
+				case 2:  // Bad signature packet
+					// TODO: Check for signature version 3
+					log.Println("Unsupported signature packet, skipping...")
+					;
+				case 6:  // Bad public key packet
+					// TODO: Check for unsupported PGP public key packet version
+					// For now, clear state, ignore to next key
+					log.Println("Unsupported public key packet, skipping...")
+					pubKey = nil
+					currentSignable = nil
+					currentUserId = nil
+				}
+			//case *packet.UserAttribute:
+			}
+		}
+		if pubKey != nil {
+			keyChan <- pubKey
+		}
+	}()
+	return keyChan, errorChan
+}
+
+func splitUserId(id string) []string {
+	splitUidRegex, _ := regexp.Compile("\\S+")
+	result := splitUidRegex.FindAllString(id, -1)
+	for i, s := range result {
+		result[i] = strings.Trim(s, "<>")
+	}
+	return result
 }
